<resources>
    <string name="app_name">Book Reader</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    //URLs
    <string name="BASE_URL">www.googleapis.com/</string>
    <string name="Path">"/books/v1/volumes?q=1"</string>

    <string name="Preview">preview</string>
    <string name="KEY">key</string>
    <string name="No_Internet">Please Turn ON Internet Connection</string>
    <string name="AspectRatio">0.73f</string>
    <string name="action_share">Share</string>

    //Book Details Captions
    <string name="BOOK_ID">ID</string>
    <string name="BOOK_ISBN">ISBN</string>
    <string name="BOOK_TITLE">TITLE</string>
    <string name="AUTHOR">AUTHOR</string>
    <string name="PUBLISHED_YEAR">YEAR</string>
    <string name="IMAGE">IMAGE</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="PREVIEW_LINK">PREVIEW_URL</string>
    <string name="BUY_LINK">BUY_LINK</string>
    <string name="DOWNLOAD_LINK">DOWNLOAD_LINK</string>
    <string name="connection_error">Network Connection Error</string>
    <string name="xml_error">XML error</string>
    <string name="BUY_Amazon">Buy from Amazon</string>
    <string name="WEB_LINK">WEB_READER_LINK</string>
    <string name="RATING">RATING</string>
    <string name="HAS_ID">HAS_ID</string>
    <string name="PRICE">PRICE</string>
    <string name="Review_Link">Review_Link</string>

    <string name="search_bar">Search</string>
    <string name="Refresh">Refresh</string>
    <string name="URL_Link">url</string>

    <string name="Business">Business</string>
    <string name="Fiction">Fiction</string>
    <string name="Fantasy">Fantasy</string>
    <string name="NonFiction">Non Fiction</string>
    <string name="Love">Love</string>
    <string name="Comics">Comics</string>
    <string name="Adventure">Adventure</string>

    <string name="Image_Width">240</string>
    <string name="NULL">NULL</string>
    <string name="Not_Available">[N/A]</string>
    <string name="BOOK_TAG">BOOK_TAG</string>
    <string name="ASIN">asin</string>
    <string name="FavoriteMarked">This book marked as favorite.</string>
    <string name="UnFavorite">This book removed from favorite.</string>
    <string name="Already_exists">This book is already marked as favorite.</string>
    <string name="Favorite_empty_list">Favorite list is empty.</string>
    <string name="searchable">Searchable</string>
    <string name="hint_search">Enter your desire book name</string>
    <string name="DetailActivity">Book Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget">Empty widget.</string>
    <string name="configure">Configure</string>
    <string name="TopBooks">Famous Books</string>
    <string name="TopBooksTag">topbooks</string>
    <string name="action_Favorite">favorite</string>
    <string name="NotFound">Sorry, your desire book or author not found.</string>
    <string name="FillSearchBox">Please enter desire book or author name.</string>
    <string name="FREE_TAG">FREE</string>
    <string name="FREE_DESCRIPTION_TAG">[N/A]. Please click on [Google Preview] for free access.</string>
    <string name="ExtraSubject">Awesome Reader App</string>
    <string name="ExtraText">Hi, This is an amazing app for readers. Just try this, here is the link: http://myappwebsitelink.com</string>
    <string name="PaidBooks">Paid Books</string>
    <string name="FreeBooks">Free Books</string>
    <string name="FavoriteBooks">Favorite Books</string>
    <string name="GOOGLE_PREVIEW_HTML">file:///android_asset/google_preview.html</string>
    <string name="No_Internet_Connection">Internet connection turned OFF.\nCould you please turn ON Internet connection\n and press refresh button down below.</string>

    <!-- AWS Services-->
    <string name="AmazonLink">Amazon Link</string>
    <string name="AWS_ACCESS_KEY_ID">AKIAILMCDWNHZ6OBN2QQ</string>
    <string name="AWS_SECRET_KEY">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</string>
    <string name="ENDPOINT">webservices.amazon.in</string>
    <string name="AWS_Service">Service</string>
    <string name="AWS_Operation">Operation</string>
    <string name="ItemSearch">ItemSearch</string>
    <string name="AWSAccessKeyId">AWSAccessKeyId</string>
    <string name="ASSOCIATE_TAG">superssingh-21</string>
    <string name="AssociateTag">AssociateTag</string>
    <string name="SearchIndex">SearchIndex</string>
    <string name="searchIndexKey">Books</string>
    <string name="RESPONSE_GROUP">EditorialReview,Images,ItemAttributes,Reviews</string>
    <string name="ResponseGroup">ResponseGroup</string>
    <string name="Keywords">Keywords</string>
    <string name="AWS_EndpointException">endpoint is null or empty</string>
    <string name="AWS_ACCESS_KEY_ID_Exception">awsAccessKeyId is null or empty</string>
    <string name="AWS_SECRET_KEY_Exception">awsSecretKey is null or empty</string>
    <string name="Timestamp">Timestamp</string>

    <!--Main Activity-->
    <string name="ImplementFragmentListener">must implement OnFragmentInteractionListener.</string>
    <string name="Retry">Please retry.</string>
    <string name="DefaultSearch">Data refreshed.</string>
    <string name="SYSTEM_PING">/system/bin/ping -c 1 8.8.8.8</string>
    <string name="AdLoadError">\"Ad failed to load! \"</string>
    <string name="AdLeftApplication">Ad left application!</string>
    <string name="AdOpen">Ad is opened!</string>
    <string name="RealmDatabaseName">favorite.realm</string>
    <string name="InternetAvailable">Internet connection not available.</string>
    <string name="InternetNotAvailable">Internet connection not available.</string>
    <string name="RobotoRegular">Roboto-Regular.ttf</string>
    <string name="VERSION">1</string>
    <string name="Share">Share Using</string>
    <string name="MessageType">text/plain</string>

    <!--contentDescription-->
    <string name="RetryButton">This is retry button!</string>
    <string name="BookCover">This is a book image from the list of books!</string>
    <string name="WidgetBook">This is a book image from the online list of top famous books!</string>
    <string name="WidgetIcon">This is icon of book widget.</string>
    <string name="widgetButton">This is a widget button for launch widget activity that shows top famous books list.</string>
    <string name="FavoriteBookImage">This is a book image from favorite list.</string>
    <string name="DeleteButton">This is a delete button to delete this book from favorite list.</string>
    <string name="CancelButton">This is a close button to close search box.</string>
    <string name="searchButton">This is a search button to start search a particular book or author name that you have entered in input box.</string>
    <string name="InputBox">This is the input box. Please enter your desire book or author name here.</string>
    <string name="RefreshButton">This is a refresh button for refresh and retry to gather books list.</string>
    <string name="ImageCover">This is image of the selected book from book detail page.</string>
    <string name="GooglePreview">This is view button to read selected free book online.</string>
    <string name="FreeBookImage">This is a book from list of free books.</string>
    <string name="appIcon">This is an app icon of navigation header.</string>
    <string name="widgetImage">This is a book of widget book list.</string>
    <string name="Communicate">Communicate</string>
    <string name="ShareCaption">Share</string>
    <string name="Favorite_List">Favorite Books</string>
    <string name="GoogleFreeBooks">Google Free Books</string>
    <string name="BooksFetched">Books list fetched!</string>
    <string name="into">It is</string>
    <string name="FavoriteBooksWidget">Favorite List</string>
    <string name="TopBooksWidget">Top Famous Books List</string>
    <string name="ReadTimeOutSecond">10000</string>
    <string name="ConnectTimeOutSecond">15000</string>
    <string name="FREE_STATE">free_books</string>
    <string name="RetryApp">This is a retry button for re-run app.</string>
    <string name="widgetLauncher">This is launcher button to show all top famous books list.</string>
    <string name="PAID_BOOKS">paid_books</string>
    <string name="MENU_POSITION">menu_item</string>
    <string name="NULL_Value">Null Value</string>
    <string name="GET">GET</string>

    <!-- Testing -->
    <string name="TestNullBooks">Null Books</string>
    <string name="TEST_KEY">test</string>
    <string name="TestEMPTY_LIST">EMPTY BOOK LIST.</string>
    <string name="TRANSLATION_Y">translationY</string>
    <string name="JAVASCRIPT_INIT">javascript:initialize(\'</string>
    <string name="JAVASCRIPT_CLOSE">\')</string>
    <string name="google_books_domain">https://www.googleapis.com</string>

</resources>
