<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_amazon"
            android:checked="true"
            android:icon="@drawable/ic_shop"
            android:title="@string/BUY_Amazon" />
        <item
            android:id="@+id/nav_google"
            android:icon="@drawable/ic_book"
            android:title="@string/GoogleFreeBooks" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_enabled"
            android:title="@string/Favorite_List" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/menu_item_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:icon="@drawable/ic_share"
                android:title="@string/ShareCaption" />
        </menu>
    </item>

</menu>

